# VIPRE

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md  README.txt  VIPRE.sln
data/Cardiac-CT/: 178530416.dcm  178531408.dcm  178532400.dcm  178533392.dcm  178534384.dcm  178535376.dcm  178536368.dcm  178537360.dcm  178538352.dcm  178539344.dcm  178540336.dcm  178541328.dcm  178542320.dcm  178543312.dcm  178544304.dcm  178545296.dcm  178546288.dcm  178547280.dcm  178548272.dcm  178549264.dcm  178550256.dcm  178551248.dcm  178552240.dcm  178553232.dcm  178554224.dcm  178555216.dcm  178556208.dcm  178557200.dcm  178558192.dcm  178559184.dcm  178560176.dcm  178561168.dcm  178562160.dcm  178563152.dcm  178564144.dcm  178565136.dcm  178566128.dcm  178567120.dcm  178568112.dcm  178569104.dcm  (+315 more)
data/MANIX/: IM-0001-0001.dcm  IM-0001-0002.dcm  IM-0001-0003.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm  IM-0001-0007.dcm  IM-0001-0008.dcm  IM-0001-0009.dcm  IM-0001-0010.dcm  IM-0001-0011.dcm  IM-0001-0012.dcm  IM-0001-0013.dcm  IM-0001-0014.dcm  IM-0001-0015.dcm  IM-0001-0016.dcm  IM-0001-0017.dcm  IM-0001-0018.dcm  IM-0001-0019.dcm  IM-0001-0020.dcm  IM-0001-0021.dcm  IM-0001-0022.dcm  IM-0001-0023.dcm  IM-0001-0024.dcm  IM-0001-0025.dcm  IM-0001-0026.dcm  IM-0001-0027.dcm  IM-0001-0028.dcm  IM-0001-0029.dcm  IM-0001-0030.dcm  IM-0001-0031.dcm  IM-0001-0032.dcm  IM-0001-0033.dcm  IM-0001-0034.dcm  IM-0001-0035.dcm  IM-0001-0036.dcm  IM-0001-0037.dcm  IM-0001-0038.dcm  IM-0001-0039.dcm  IM-0001-0040.dcm  IM-0001-0041.dcm  (+418 more)
data/TAKEI/: CT0001.dcm  CT0002.dcm  CT0003.dcm  CT0004.dcm  CT0005.dcm  CT0006.dcm  CT0007.dcm  CT0008.dcm  CT0009.dcm  CT0010.dcm  CT0011.dcm  CT0012.dcm  CT0013.dcm  CT0014.dcm  CT0015.dcm  CT0016.dcm  CT0017.dcm  CT0018.dcm  CT0019.dcm  CT0020.dcm  CT0021.dcm  CT0022.dcm  CT0023.dcm  CT0024.dcm  CT0025.dcm  CT0026.dcm  CT0027.dcm  CT0028.dcm  CT0029.dcm  CT0030.dcm  CT0031.dcm  CT0032.dcm  CT0033.dcm  CT0034.dcm  CT0035.dcm  CT0036.dcm  CT0037.dcm  CT0038.dcm  CT0039.dcm  CT0040.dcm  (+146 more)
data/YAMAGUCHI/: CT0001.dcm  CT0002.dcm  CT0003.dcm  CT0004.dcm  CT0005.dcm  CT0006.dcm  CT0007.dcm  CT0008.dcm  CT0009.dcm  CT0010.dcm  CT0011.dcm  CT0012.dcm  CT0013.dcm  CT0014.dcm  CT0015.dcm  CT0016.dcm  CT0017.dcm  CT0018.dcm  CT0019.dcm  CT0020.dcm  CT0021.dcm  CT0022.dcm  CT0023.dcm  CT0024.dcm  CT0025.dcm  CT0026.dcm  CT0027.dcm  CT0028.dcm  CT0029.dcm  CT0030.dcm  CT0031.dcm  CT0032.dcm  CT0033.dcm  CT0034.dcm  CT0035.dcm  CT0036.dcm  CT0037.dcm  CT0038.dcm  CT0039.dcm  CT0040.dcm  (+185 more)
examples/: CMakeLists.txt
examples/vipreDICOMSeriesInfo/: CMakeLists.txt  main.cpp
examples/vipreDICOMSliceInfo/: CMakeLists.txt  main.cpp
examples/vipreDefense/: CMakeLists.txt  main.cpp
examples/vipreLighting/: CMakeLists.txt  main.cpp
examples/vipreNotificationCenter/: CMakeLists.txt  main.cpp
examples/vipreOctree/: CMakeLists.txt  main.cpp
examples/viprePrerenderPass/: CMakeLists.txt  main.cpp
examples/vipreSliceViewerOSG/: CMakeLists.txt  main.cpp
examples/vipreSliceViewerQt/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  QOSGWidget.cpp  QOSGWidget.hpp  main.cpp
include/vipre/: BackgroundCamera.hpp  BoundingBoxSwitch.hpp  ColorTables.hpp  DisplayCamera.hpp  Enums.hpp  Environment.hpp  Export.hpp  Log.hpp  NotificationCenter.hpp  OpacityTables.hpp  RenderCamera.hpp  ShaderHandler.hpp  String.hpp  TexturedCuboid.hpp  TexturedQuad.hpp  (+2 more)
models/: vivewand.mtl
shaders/: composite_raycasting.frag  composite_raycasting.vert  defense_raycasting.frag  defense_raycasting.vert  defense_raycasting2.frag  defense_raycasting2.vert  defense_raycasting2_new.frag  defense_raycasting3_oldmethod.frag  light_raycasting.frag  light_raycasting.vert  octree_raycasting.frag  octree_raycasting.vert  prerendered_backfaces.frag  prerendered_backfaces.vert
src/: CMakeLists.txt
src/vipre/: BackgroundCamera.cpp  BoundingBoxSwitch.cpp  CMakeLists.txt  ColorTables.cpp  DisplayCamera.cpp  Environment.cpp  Log.cpp  NotificationCenter.cpp  OpacityTables.cpp  RenderCamera.cpp  ShaderHandler.cpp  String.cpp  TexturedCuboid.cpp  TexturedQuad.cpp  TrackballManipulator.cpp  Version.cpp  Version.in
src/vipreDICOM/: CMakeLists.txt  Series.cpp  Slice.cpp  Version.cpp  Version.in
(+11 files in other folders)
